allow user to post a link to an image

--- a/Views/place.cshtml
+++ b/Views/place.cshtml
@@ -1,8 +1,7 @@
 <h1>@Model.GetCity()</h1>
 <ul>
   <li>@Model.GetDescription()</li>
+  <li><img src="@Model.GetImage().GetImageLocation()" alt="" /></li>
 </ul>
-
-
 <a href='/places/new'>Add another place</a>
 <a href='/places'>View all places</a>
