--- a/Views/place_form.cshtml
+++ b/Views/place_form.cshtml
@@ -5,5 +5,8 @@
   <input id='new-place' name='new-place' type='text'>
   <label for='new-description'>Place Description</label>
   <input id='new-description' name='new-description' type='text'>
+  <br>
+  <label for='new-image'>HTTP location for image</label>
+  <input id='new-image' name='new-image' type='text'>
   <button type='submit'>Add place</button>
 </form>
